# move-me-ai

./: .editorconfig  .env.example  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/: __init__.py  agent_factory.py  cli.py  logging_config.py  manager.py  model.py  models.py
src/agents/: __init__.py  housing.py  insurance.py  lifestyle.py  school.py
src/tools/: __init__.py  providers.py
tests/: test_agent_wiring.py  test_cli.py  test_housing.py  test_manager.py  test_model.py
